// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`i18n should find items by translation 1`] = `
Object {
  "data": Array [
    Book {
      "author": "Leo Tolstoy",
      "i18n": null,
      "id": "3",
      "reviews": null,
      "shortSummary": "The novel chronicles the history of ...",
      "shortSummary.i18n": Object {
        "de": "Krieg und Frieden ist ein historischer Roman des ...",
        "en": "The novel chronicles the history of ...",
      },
      "title": "War and Peace",
      "title.i18n": Object {
        "de": "Krieg und Frieden",
        "en": "War and Peace",
      },
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": false,
  },
}
`;

exports[`i18n should merge existing translations with provided translations 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "4",
  "reviews": null,
  "shortSummary": null,
  "shortSummary.i18n": Object {
    "de": "⚔️ & ☮️",
    "en": null,
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;

exports[`i18n should reject translations of unknown languages 1`] = `[Error: Unknown language 'fr' provided in translation of mutation 'create']`;

exports[`i18n should store translations if provided 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "1",
  "reviews": null,
  "shortSummary": null,
  "shortSummary.i18n": Object {
    "de": undefined,
    "en": null,
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;

exports[`i18n should store translations of multiple attributes 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "3",
  "reviews": null,
  "shortSummary": "The novel chronicles the history of ...",
  "shortSummary.i18n": Object {
    "de": "Krieg und Frieden ist ein historischer Roman des ...",
    "en": "The novel chronicles the history of ...",
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;

exports[`i18n should take main value form translations object if provided 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "2",
  "reviews": null,
  "shortSummary": null,
  "shortSummary.i18n": Object {
    "de": undefined,
    "en": null,
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;
